--- a/templates/base.jade
+++ b/templates/base.jade
@@ -3,7 +3,7 @@ html
 	head
 		meta(http-equiv="Content-Type", content="text/html", charset="utf-8")
 		title: block titulo
-		link(href=url_for('static', filename=''))
+		link(href=url_for('static', filename='foundation/css/foundation.css'))
 	body
 		header.row
 			block header
@@ -18,4 +18,4 @@ html
 			block footer
 
 		for script in scripts
-			script(src="url_for(filename='#{script}')")
+			script(src=url_for('static',filename=script))
