Add some content in the templates

--- a/templates/base.jade
+++ b/templates/base.jade
@@ -13,13 +13,12 @@ html.js.no-touch.svg.inlinesvg.svgclippaths.no-ie8compat(lang='es')
 			.large-12.columns
 				.nav-bar.right
 					ul.button-group
-						li: a(href="#").button Link 1
-						li: a(href="#").button Link 2
-						li: a(href="#").button Link 3
-						li: a(href="#").button Link 4
+						li: a(href="#").button Welcome
+						li: a(href="#").button About
+						li: a(href="#").button Contact
 
 				h1 Blog 
-					small This is my blog
+					small Un pequeño blog
 			hr
 
 
@@ -30,7 +29,7 @@ html.js.no-touch.svg.inlinesvg.svgclippaths.no-ie8compat(lang='es')
 				hr
 					.row
 						.large-6.columns
-							p Copyright no one at all. Go to town.
+							p Copyleft
 						.large-6-columns
 							ul.inline-list.right
 							for i in [1,2,3,4]
