--- a/templates/blog.jade
+++ b/templates/blog.jade
@@ -1,4 +1,4 @@
-extends base
+extends ./base
 
 block title
 	| Ricardo
@@ -8,22 +8,44 @@ block contenido
 		.large-9.columns(role='content')
 			article
 
-				h3: a(href='#') Titulo del articulo
+				h3: a(href='#') Sobre Lorem Ipsum
 				h6 Escrito por 
-					a(href='#') Autor del articulo
+					a(href='#') Ricardo
 
-				p.
-					Contenido del articulo
+				p
+					Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. 
+					Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, 
+					cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y 
+					los mezcló de tal manera que logró hacer un libro de textos especimen. 
+					No sólo sobrevivió 500 años, sino que tambien ingresó como texto de relleno en 
+					documentos electrónicos, quedando esencialmente igual al original. 
+					Fue popularizado en los 60s con la creación de las hojas "Letraset", 
+					las cuales contenian pasajes de Lorem Ipsum, y más recientemente con software de autoedición, 
+					como por ejemplo Aldus PageMaker, el cual incluye versiones de Lorem Ipsum.
+
+			article
+				h3: a(href='#') El Zen de Python
+				h6 Escrito por 
+					a(href='#') Tim Peters
+
+				p	Beautiful is better than ugly.
+				p	Explicit is better than implicit.
+				p	Simple is better than complex.
+				p	Complex is better than complicated.
+				p	Flat is better than nested.
+
+				a(href='#') Leer más
 					
 
 		aside.large-3.columns
-			h5 Categories
+			h5 Categorias
 			
 			ul.side-nav
-				for url in ['News', 'Code', 'Design', 'Fun', 'Weasels']
-					li: a(href='#') #{url}
+				for url in ['Programacion', 'Github', 'Diseño', 'Diversión', 'Entretenimiento']
+					li: a(href="#") #{url}
 
 			.panel
-				h5 Featured
-				p Prok drumstick turkey fugiat. Trip-tip elit turducken pork chop in. Swine short
-				a(href='#') Read More
+				h5 Maravilloso recuadro
+				p No se que debería incluir en este sitio pero da igual porque queda bien igualmente.
+
+				a(href='#') Leer más
